--- a/style8.css
+++ b/style8.css
@@ -147,7 +147,8 @@ h1{
     display: flex;
     flex-direction: column;
     justify-self: center;
-    margin-top: 70px;
+    position: relative;
+    top: 100px;
     font-size: 26px;
     padding: 10px;
     margin: 0 auto;
