--- a/style8.css
+++ b/style8.css
@@ -19,7 +19,10 @@ body {
     background-color: #f9f9f9;
     color: #ffffff;
 }
-
+main{
+    padding-top: 100px;
+    padding-bottom: 20px;
+}
 .header {
     background: linear-gradient(90deg, #0e0d0d, #cdcdcd);
     text-align: center;
@@ -147,8 +150,7 @@ h1{
     display: flex;
     flex-direction: column;
     justify-self: center;
-    position: relative;
-    top: 100px;
+    position: static;
     font-size: 26px;
     padding: 10px;
     margin: 0 auto;
